<resources>
    <string name="app_name">TFG</string>

    <!--MAIN ACTIVITY-->
    <string name="BtnLogin">Login</string>
    <string name="BtnRegister">Registro</string>

    <!--REGISTRO ACTIVITY-->
    <string name="CrearCuentaTxt">Crear una cuenta</string>
    <string name="EtNombre">Nombre</string>
    <string name="EtMail">Email</string>
    <string name="EtPassword">Password</string>
    <string name="EtConfirmPassword">Confirmar Password</string>
    <string name="RegisterUser">Registrar</string>
    <string name="AlreadyAccount">Tengo una cuenta</string>


</resources>